; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_ra_imm.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_ra_imm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AMD29K_TYPE_REG = common dso_local global i32 0, align 4
@AMD29K_TYPE_IMM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @decode_ra_imm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_ra_imm(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 2
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @AMD29K_TYPE_REG, align 4
  %10 = call i32 @AMD29K_SET_VALUE(i32* %5, i32 0, i32 %8, i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 3
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, 12
  %16 = ashr i32 %15, 2
  %17 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %18 = call i32 @AMD29K_SET_VALUE(i32* %11, i32 1, i32 %16, i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 3
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, 3
  %24 = load i32, i32* @AMD29K_TYPE_IMM, align 4
  %25 = call i32 @AMD29K_SET_VALUE(i32* %19, i32 2, i32 %23, i32 %24)
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @AMD29K_SET_INVALID(i32* %26, i32 3)
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @AMD29K_SET_INVALID(i32* %28, i32 4)
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @AMD29K_SET_INVALID(i32* %30, i32 5)
  ret void
}

declare dso_local i32 @AMD29K_SET_VALUE(i32*, i32, i32, i32) #1

declare dso_local i32 @AMD29K_SET_INVALID(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
